fixed a bug with a vertical bar in the schedule and fixed a bug with horizontal scrolling

--- a/app/Components/SectionThree/sectionThree.module.css
+++ b/app/Components/SectionThree/sectionThree.module.css
@@ -24,7 +24,7 @@
     position: absolute;
     left: 90px;
     top: -20px;
-    width: 100%;
+    width: 80%;
     color: rgba(219, 175, 150, 0.25);
     font-family: EB Garamond, serif;
     font-size: calc((100vw - 360px) / (1440 - 360) * (110 - 30) + 30px);
@@ -82,7 +82,7 @@
 }
 
 .right_icon {
-    padding-left: 37.5%;
+    padding-left: 17.5%;
 }
 
 .wrapper {
@@ -143,13 +143,13 @@
 
 .img {
     grid-area: b;
-    margin: 0 81px;
+    margin: 0 30%;
 }
 
 .section_svg {
     position: absolute;
     top: -90px;
-    left: -150px;
+    left: -100px;
     z-index: 0;
 }
 
@@ -181,6 +181,26 @@
 
     .place {
         font-size: 20px;
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    .right_icon {
+        padding-left: 0;
+    }
+
+    .img {
+        margin-right: 20%;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .right_icon {
+        padding-left: 7.5%;
+    }
+
+    .img {
+        margin-right: 20%;
     }
 }
 
