--- a/app/Components/SectionTwo/sectionTwo.module.css
+++ b/app/Components/SectionTwo/sectionTwo.module.css
@@ -82,7 +82,7 @@
 .section_svg {
     position: absolute;
     top: -30px;
-    left: 300px;
+    left: 250px;
     z-index: 0;
 }
 
